--- a/sdk/core/ci.yml
+++ b/sdk/core/ci.yml
@@ -10,34 +10,16 @@ trigger:
     include:
     - sdk/core/
 
-parameters:
-- name: release_azure_core
-  displayName: 'azure_core'
-  type: boolean
-  default: true
-- name: release_azure_core_macros
-  displayName: 'azure_core_macros'
-  type: boolean
-  default: true
-- name: release_azure_core_amqp
-  displayName: 'azure_core_amqp'
-  type: boolean
-  default: true
-- name: release_azure_core_opentelemetry
-  displayName: 'azure_core_opentelemetry'
-  type: boolean
-  default: true
-
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: core
     Artifacts:
     - name: azure_core
-      releaseInBatch: ${{ parameters.release_azure_core }}
+      safeName: AzureCore
     - name: azure_core_macros
-      releaseInBatch: ${{ parameters.release_azure_core_macros }}
+      safeName: AzureCoreMacros
     - name: azure_core_amqp
-      releaseInBatch: ${{ parameters.release_azure_core_amqp }}
+      safeName: AzureCoreAmqp
     - name: azure_core_opentelemetry
-      releaseInBatch: ${{ parameters.release_azure_core_opentelemetry }}
+      safeName: AzureCoreOpentelemetry
