--- a/sdk/cosmos/ci.yml
+++ b/sdk/cosmos/ci.yml
@@ -10,16 +10,10 @@ trigger:
     include:
     - sdk/cosmos/
 
-parameters:
-- name: release_azure_data_cosmos
-  displayName: 'azure_data_cosmos'
-  type: boolean
-  default: true
-
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: cosmos
     Artifacts:
     - name: azure_data_cosmos
-      releaseInBatch: ${{ parameters.release_azure_data_cosmos }}
+      safeName: AzureDataCosmos
