--- a/sdk/typespec/ci.yml
+++ b/sdk/typespec/ci.yml
@@ -10,28 +10,14 @@ trigger:
     include:
     - sdk/typespec/
 
-parameters:
-- name: release_typespec
-  displayName: 'typespec'
-  type: boolean
-  default: true
-- name: release_release_typespec_macros
-  displayName: 'typespec_macros'
-  type: boolean
-  default: true
-- name: release_typespec_client_core
-  displayName: 'typespec_client_core'
-  type: boolean
-  default: true
-
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: typespec
     Artifacts:
     - name: typespec
-      releaseInBatch: ${{ parameters.release_typespec }}
+      safeName: Typespec
     - name: typespec_macros
-      releaseInBatch: ${{ parameters.release_release_typespec_macros }}
+      safeName: TypespecMacros
     - name: typespec_client_core
-      releaseInBatch: ${{ parameters.release_typespec_client_core }}
+      safeName: TypespecClientCore
